// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AspectWithTreatMissingData 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "StateMachine2E01A3A5": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "StateMachineRoleB840431D",
      ],
      "Properties": {
        "DefinitionString": ""{\\"StartAt\\":\\"PassState\\",\\"States\\":{\\"PassState\\":{\\"Type\\":\\"Pass\\",\\"Result\\":{\\"Value\\":\\"Hello, Step Functions!\\"},\\"End\\":true}}}"",
        "RoleArn": {
          "Fn::GetAtt": [
            "StateMachineRoleB840431D",
            "Arn",
          ],
        },
        "StateMachineName": "TestStateMachine",
      },
      "Type": "AWS::StepFunctions::StateMachine",
      "UpdateReplacePolicy": "Delete",
    },
    "StateMachineRoleB840431D": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "states.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "StateMachineSfStateMachineRecommendedAlarmsFromAspectStateMachineExecutionThrottledA51784C7": {
      "Properties": {
        "AlarmDescription": "This alarm is used to detect throttled executions due to exceeding AWS service limits.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "StateMachine2E01A3A5",
                  "Name",
                ],
              },
              " - ExecutionThrottled",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "StateMachine2E01A3A5",
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "ExecutionThrottled",
        "Namespace": "AWS/States",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 5,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "StateMachineSfStateMachineRecommendedAlarmsFromAspectStateMachineExecutionTimeAAA39742": {
      "Properties": {
        "AlarmDescription": "This alarm is used to detect sudden increases in execution time.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "StateMachine2E01A3A5",
                  "Name",
                ],
              },
              " - ExecutionTime",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "StateMachine2E01A3A5",
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "ExecutionTime",
        "Namespace": "AWS/States",
        "Period": 60,
        "Statistic": "Average",
        "Threshold": 300000,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "StateMachineSfStateMachineRecommendedAlarmsFromAspectStateMachineExecutionsFailedB39F05DB": {
      "Properties": {
        "AlarmDescription": "This alarm is used to detect workflows that are not working as expected.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "StateMachine2E01A3A5",
                  "Name",
                ],
              },
              " - ExecutionsFailed",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "StateMachine2E01A3A5",
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "ExecutionsFailed",
        "Namespace": "AWS/States",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 5,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "StateMachineSfStateMachineRecommendedAlarmsFromAspectStateMachineExecutionsTimedOutD5E9363C": {
      "Properties": {
        "AlarmDescription": "This alarm helps in identifying timeouts in state machine executions due to poor configuration, inadequate resource allocation, or issues in the called services that need addressing.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "StateMachine2E01A3A5",
                  "Name",
                ],
              },
              " - ExecutionsTimedOut",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "StateMachine2E01A3A5",
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "ExecutionsTimedOut",
        "Namespace": "AWS/States",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 5,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`SfStateMachineSnapshot 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "StateMachine2E01A3A5": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "StateMachineRoleB840431D",
      ],
      "Properties": {
        "DefinitionString": ""{\\"StartAt\\":\\"PassState\\",\\"States\\":{\\"PassState\\":{\\"Type\\":\\"Pass\\",\\"Result\\":{\\"Value\\":\\"Hello, Step Functions!\\"},\\"End\\":true}}}"",
        "RoleArn": {
          "Fn::GetAtt": [
            "StateMachineRoleB840431D",
            "Arn",
          ],
        },
        "StateMachineName": "TestStateMachine",
      },
      "Type": "AWS::StepFunctions::StateMachine",
      "UpdateReplacePolicy": "Delete",
    },
    "StateMachineRoleB840431D": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "states.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "StateMachineSfStateMachineRecommendedAlarmsFromAspectStateMachineExecutionThrottledA51784C7": {
      "Properties": {
        "AlarmDescription": "This alarm is used to detect throttled executions due to exceeding AWS service limits.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "StateMachine2E01A3A5",
                  "Name",
                ],
              },
              " - ExecutionThrottled",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "StateMachine2E01A3A5",
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "ExecutionThrottled",
        "Namespace": "AWS/States",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 5,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "StateMachineSfStateMachineRecommendedAlarmsFromAspectStateMachineExecutionTimeAAA39742": {
      "Properties": {
        "AlarmDescription": "This alarm is used to detect sudden increases in execution time.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "StateMachine2E01A3A5",
                  "Name",
                ],
              },
              " - ExecutionTime",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "StateMachine2E01A3A5",
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "ExecutionTime",
        "Namespace": "AWS/States",
        "Period": 60,
        "Statistic": "Average",
        "Threshold": 300000,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "StateMachineSfStateMachineRecommendedAlarmsFromAspectStateMachineExecutionsFailedB39F05DB": {
      "Properties": {
        "AlarmDescription": "This alarm is used to detect workflows that are not working as expected.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "StateMachine2E01A3A5",
                  "Name",
                ],
              },
              " - ExecutionsFailed",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "StateMachine2E01A3A5",
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "ExecutionsFailed",
        "Namespace": "AWS/States",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 5,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "StateMachineSfStateMachineRecommendedAlarmsFromAspectStateMachineExecutionsTimedOutD5E9363C": {
      "Properties": {
        "AlarmDescription": "This alarm helps in identifying timeouts in state machine executions due to poor configuration, inadequate resource allocation, or issues in the called services that need addressing.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "StateMachine2E01A3A5",
                  "Name",
                ],
              },
              " - ExecutionsTimedOut",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "StateMachine2E01A3A5",
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "ExecutionsTimedOut",
        "Namespace": "AWS/States",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 5,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`SfStateMachineSnapshotDefaultActionsInUse 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "StateMachine2E01A3A5": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "StateMachineRoleB840431D",
      ],
      "Properties": {
        "DefinitionString": ""{\\"StartAt\\":\\"PassState\\",\\"States\\":{\\"PassState\\":{\\"Type\\":\\"Pass\\",\\"Result\\":{\\"Value\\":\\"Hello, Step Functions!\\"},\\"End\\":true}}}"",
        "RoleArn": {
          "Fn::GetAtt": [
            "StateMachineRoleB840431D",
            "Arn",
          ],
        },
        "StateMachineName": "TestStateMachine",
      },
      "Type": "AWS::StepFunctions::StateMachine",
      "UpdateReplacePolicy": "Delete",
    },
    "StateMachineRoleB840431D": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "states.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "TopicBFC7AF6E": {
      "Type": "AWS::SNS::Topic",
    },
    "sfStateMachineAlarmsStateMachineExecutionThrottledEC4F1FD4": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "AlarmDescription": "This alarm is used to detect throttled executions due to exceeding AWS service limits.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "StateMachine2E01A3A5",
                  "Name",
                ],
              },
              " - ExecutionThrottled",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "StateMachine2E01A3A5",
            },
          },
        ],
        "EvaluationPeriods": 5,
        "InsufficientDataActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "MetricName": "ExecutionThrottled",
        "Namespace": "AWS/States",
        "OKActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 5,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "sfStateMachineAlarmsStateMachineExecutionTimeFC58C723": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "AlarmDescription": "This alarm is used to detect sudden increases in execution time.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "StateMachine2E01A3A5",
                  "Name",
                ],
              },
              " - ExecutionTime",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "StateMachine2E01A3A5",
            },
          },
        ],
        "EvaluationPeriods": 5,
        "InsufficientDataActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "MetricName": "ExecutionTime",
        "Namespace": "AWS/States",
        "OKActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "Period": 60,
        "Statistic": "Average",
        "Threshold": 300000,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "sfStateMachineAlarmsStateMachineExecutionsFailedD1F885EB": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "AlarmDescription": "This alarm is used to detect workflows that are not working as expected.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "StateMachine2E01A3A5",
                  "Name",
                ],
              },
              " - ExecutionsFailed",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "StateMachine2E01A3A5",
            },
          },
        ],
        "EvaluationPeriods": 5,
        "InsufficientDataActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "MetricName": "ExecutionsFailed",
        "Namespace": "AWS/States",
        "OKActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 5,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "sfStateMachineAlarmsStateMachineExecutionsTimedOut6F0C2B8A": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "AlarmDescription": "This alarm helps in identifying timeouts in state machine executions due to poor configuration, inadequate resource allocation, or issues in the called services that need addressing.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "StateMachine2E01A3A5",
                  "Name",
                ],
              },
              " - ExecutionsTimedOut",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "StateMachine2E01A3A5",
            },
          },
        ],
        "EvaluationPeriods": 5,
        "InsufficientDataActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "MetricName": "ExecutionsTimedOut",
        "Namespace": "AWS/States",
        "OKActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 5,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`SfStateMachineSnapshotWithExclusion 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "StateMachine2E01A3A5": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "StateMachineRoleB840431D",
      ],
      "Properties": {
        "DefinitionString": ""{\\"StartAt\\":\\"PassState\\",\\"States\\":{\\"PassState\\":{\\"Type\\":\\"Pass\\",\\"Result\\":{\\"Value\\":\\"Hello, Step Functions!\\"},\\"End\\":true}}}"",
        "RoleArn": {
          "Fn::GetAtt": [
            "StateMachineRoleB840431D",
            "Arn",
          ],
        },
        "StateMachineName": "TestStateMachine",
      },
      "Type": "AWS::StepFunctions::StateMachine",
      "UpdateReplacePolicy": "Delete",
    },
    "StateMachineRoleB840431D": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "states.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "StateMachineSfStateMachineRecommendedAlarmsFromAspectStateMachineExecutionThrottledA51784C7": {
      "Properties": {
        "AlarmDescription": "This alarm is used to detect throttled executions due to exceeding AWS service limits.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "StateMachine2E01A3A5",
                  "Name",
                ],
              },
              " - ExecutionThrottled",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "StateMachine2E01A3A5",
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "ExecutionThrottled",
        "Namespace": "AWS/States",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 5,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "StateMachineSfStateMachineRecommendedAlarmsFromAspectStateMachineExecutionsFailedB39F05DB": {
      "Properties": {
        "AlarmDescription": "This alarm is used to detect workflows that are not working as expected.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "StateMachine2E01A3A5",
                  "Name",
                ],
              },
              " - ExecutionsFailed",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "StateMachine2E01A3A5",
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "ExecutionsFailed",
        "Namespace": "AWS/States",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 5,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "StateMachineSfStateMachineRecommendedAlarmsFromAspectStateMachineExecutionsTimedOutD5E9363C": {
      "Properties": {
        "AlarmDescription": "This alarm helps in identifying timeouts in state machine executions due to poor configuration, inadequate resource allocation, or issues in the called services that need addressing.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "StateMachine2E01A3A5",
                  "Name",
                ],
              },
              " - ExecutionsTimedOut",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "StateMachine2E01A3A5",
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "ExecutionsTimedOut",
        "Namespace": "AWS/States",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 5,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`SnapshotForSfStateMachineConstruct 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "StateMachine2E01A3A5": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "StateMachineRoleB840431D",
      ],
      "Properties": {
        "DefinitionString": ""{\\"StartAt\\":\\"PassState\\",\\"States\\":{\\"PassState\\":{\\"Type\\":\\"Pass\\",\\"Result\\":{\\"Value\\":\\"Hello, Step Functions!\\"},\\"End\\":true}}}"",
        "RoleArn": {
          "Fn::GetAtt": [
            "StateMachineRoleB840431D",
            "Arn",
          ],
        },
        "StateMachineName": "TestStateMachine",
      },
      "Type": "AWS::StepFunctions::StateMachine",
      "UpdateReplacePolicy": "Delete",
    },
    "StateMachineRoleB840431D": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "states.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "StateMachineSfStateMachineRecommendedAlarmsStateMachineExecutionThrottledA1D45384": {
      "Properties": {
        "AlarmDescription": "This alarm is used to detect throttled executions due to exceeding AWS service limits.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "StateMachine2E01A3A5",
                  "Name",
                ],
              },
              " - ExecutionThrottled",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "StateMachine2E01A3A5",
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "ExecutionThrottled",
        "Namespace": "AWS/States",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 5,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "StateMachineSfStateMachineRecommendedAlarmsStateMachineExecutionTime1BD79216": {
      "Properties": {
        "AlarmDescription": "This alarm is used to detect sudden increases in execution time.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "StateMachine2E01A3A5",
                  "Name",
                ],
              },
              " - ExecutionTime",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "StateMachine2E01A3A5",
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "ExecutionTime",
        "Namespace": "AWS/States",
        "Period": 60,
        "Statistic": "Average",
        "Threshold": 300000,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "StateMachineSfStateMachineRecommendedAlarmsStateMachineExecutionsFailedB616149F": {
      "Properties": {
        "AlarmDescription": "This alarm is used to detect workflows that are not working as expected.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "StateMachine2E01A3A5",
                  "Name",
                ],
              },
              " - ExecutionsFailed",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "StateMachine2E01A3A5",
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "ExecutionsFailed",
        "Namespace": "AWS/States",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 5,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "StateMachineSfStateMachineRecommendedAlarmsStateMachineExecutionsTimedOut3FA281AA": {
      "Properties": {
        "AlarmDescription": "This alarm helps in identifying timeouts in state machine executions due to poor configuration, inadequate resource allocation, or issues in the called services that need addressing.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "StateMachine2E01A3A5",
                  "Name",
                ],
              },
              " - ExecutionsTimedOut",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "StateMachine2E01A3A5",
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "ExecutionsTimedOut",
        "Namespace": "AWS/States",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 5,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`alarms can be applied individually to resources using extended construct 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "StateMachine2E01A3A5": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "StateMachineRoleB840431D",
      ],
      "Properties": {
        "DefinitionString": ""{\\"StartAt\\":\\"PassState\\",\\"States\\":{\\"PassState\\":{\\"Type\\":\\"Pass\\",\\"Result\\":{\\"Value\\":\\"Hello, Step Functions!\\"},\\"End\\":true}}}"",
        "RoleArn": {
          "Fn::GetAtt": [
            "StateMachineRoleB840431D",
            "Arn",
          ],
        },
        "StateMachineName": "TestStateMachine",
      },
      "Type": "AWS::StepFunctions::StateMachine",
      "UpdateReplacePolicy": "Delete",
    },
    "StateMachineExecutionThrottledAlarmB2FE80D0": {
      "Properties": {
        "AlarmDescription": "This alarm is used to detect throttled executions due to exceeding AWS service limits.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "StateMachine2E01A3A5",
                  "Name",
                ],
              },
              " - ExecutionThrottled",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "StateMachine2E01A3A5",
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "ExecutionThrottled",
        "Namespace": "AWS/States",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 5,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "StateMachineExecutionTimeAlarmA5F124D6": {
      "Properties": {
        "AlarmDescription": "This alarm is used to detect sudden increases in execution time.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "StateMachine2E01A3A5",
                  "Name",
                ],
              },
              " - ExecutionTime",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "StateMachine2E01A3A5",
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "ExecutionTime",
        "Namespace": "AWS/States",
        "Period": 60,
        "Statistic": "Average",
        "Threshold": 300000,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "StateMachineExecutionsFailedAlarmE96016BF": {
      "Properties": {
        "AlarmDescription": "This alarm is used to detect workflows that are not working as expected.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "StateMachine2E01A3A5",
                  "Name",
                ],
              },
              " - ExecutionsFailed",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "StateMachine2E01A3A5",
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "ExecutionsFailed",
        "Namespace": "AWS/States",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 5,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "StateMachineExecutionsTimedOutAlarmE06C9EE9": {
      "Properties": {
        "AlarmDescription": "This alarm helps in identifying timeouts in state machine executions due to poor configuration, inadequate resource allocation, or issues in the called services that need addressing.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "StateMachine2E01A3A5",
                  "Name",
                ],
              },
              " - ExecutionsTimedOut",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "StateMachine2E01A3A5",
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "ExecutionsTimedOut",
        "Namespace": "AWS/States",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 5,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "StateMachineRoleB840431D": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "states.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`default alarm actions are overridden when individual alarm actions are provided in configuration 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "LambdaD247545B": {
      "DependsOn": [
        "LambdaServiceRoleA8ED4D3B",
      ],
      "Properties": {
        "Code": {
          "ZipFile": "exports.handler = async (event) => { console.log(event); }",
        },
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "LambdaServiceRoleA8ED4D3B",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "LambdaServiceRoleA8ED4D3B": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "LambdaStateMachineExecutionThrottledAlarmPermission2ABC8113": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "LambdaD247545B",
            "Arn",
          ],
        },
        "Principal": "lambda.alarms.cloudwatch.amazonaws.com",
        "SourceAccount": "123456789012",
        "SourceArn": {
          "Fn::GetAtt": [
            "sfStateMachineAlarmsStateMachineExecutionThrottledEC4F1FD4",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "LambdaStateMachineExecutionTimeAlarmPermission1E4823A1": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "LambdaD247545B",
            "Arn",
          ],
        },
        "Principal": "lambda.alarms.cloudwatch.amazonaws.com",
        "SourceAccount": "123456789012",
        "SourceArn": {
          "Fn::GetAtt": [
            "sfStateMachineAlarmsStateMachineExecutionTimeFC58C723",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "LambdaStateMachineExecutionsFailedAlarmPermission31E6BD81": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "LambdaD247545B",
            "Arn",
          ],
        },
        "Principal": "lambda.alarms.cloudwatch.amazonaws.com",
        "SourceAccount": "123456789012",
        "SourceArn": {
          "Fn::GetAtt": [
            "sfStateMachineAlarmsStateMachineExecutionsFailedD1F885EB",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "LambdaStateMachineExecutionsTimedOutAlarmPermissionBB3A52F6": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "LambdaD247545B",
            "Arn",
          ],
        },
        "Principal": "lambda.alarms.cloudwatch.amazonaws.com",
        "SourceAccount": "123456789012",
        "SourceArn": {
          "Fn::GetAtt": [
            "sfStateMachineAlarmsStateMachineExecutionsTimedOut6F0C2B8A",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "StateMachine2E01A3A5": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "StateMachineRoleB840431D",
      ],
      "Properties": {
        "DefinitionString": ""{\\"StartAt\\":\\"PassState\\",\\"States\\":{\\"PassState\\":{\\"Type\\":\\"Pass\\",\\"Result\\":{\\"Value\\":\\"Hello, Step Functions!\\"},\\"End\\":true}}}"",
        "RoleArn": {
          "Fn::GetAtt": [
            "StateMachineRoleB840431D",
            "Arn",
          ],
        },
        "StateMachineName": "TestStateMachine",
      },
      "Type": "AWS::StepFunctions::StateMachine",
      "UpdateReplacePolicy": "Delete",
    },
    "StateMachineRoleB840431D": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "states.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "TopicBFC7AF6E": {
      "Type": "AWS::SNS::Topic",
    },
    "sfStateMachineAlarmsStateMachineExecutionThrottledEC4F1FD4": {
      "Properties": {
        "AlarmActions": [
          {
            "Fn::GetAtt": [
              "LambdaD247545B",
              "Arn",
            ],
          },
        ],
        "AlarmDescription": "This alarm is used to detect throttled executions due to exceeding AWS service limits.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "StateMachine2E01A3A5",
                  "Name",
                ],
              },
              " - ExecutionThrottled",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "StateMachine2E01A3A5",
            },
          },
        ],
        "EvaluationPeriods": 5,
        "InsufficientDataActions": [
          {
            "Fn::GetAtt": [
              "LambdaD247545B",
              "Arn",
            ],
          },
        ],
        "MetricName": "ExecutionThrottled",
        "Namespace": "AWS/States",
        "OKActions": [
          {
            "Fn::GetAtt": [
              "LambdaD247545B",
              "Arn",
            ],
          },
        ],
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 5,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "sfStateMachineAlarmsStateMachineExecutionTimeFC58C723": {
      "Properties": {
        "AlarmActions": [
          {
            "Fn::GetAtt": [
              "LambdaD247545B",
              "Arn",
            ],
          },
        ],
        "AlarmDescription": "This alarm is used to detect sudden increases in execution time.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "StateMachine2E01A3A5",
                  "Name",
                ],
              },
              " - ExecutionTime",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "StateMachine2E01A3A5",
            },
          },
        ],
        "EvaluationPeriods": 5,
        "InsufficientDataActions": [
          {
            "Fn::GetAtt": [
              "LambdaD247545B",
              "Arn",
            ],
          },
        ],
        "MetricName": "ExecutionTime",
        "Namespace": "AWS/States",
        "OKActions": [
          {
            "Fn::GetAtt": [
              "LambdaD247545B",
              "Arn",
            ],
          },
        ],
        "Period": 60,
        "Statistic": "Average",
        "Threshold": 300000,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "sfStateMachineAlarmsStateMachineExecutionsFailedD1F885EB": {
      "Properties": {
        "AlarmActions": [
          {
            "Fn::GetAtt": [
              "LambdaD247545B",
              "Arn",
            ],
          },
        ],
        "AlarmDescription": "This alarm is used to detect workflows that are not working as expected.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "StateMachine2E01A3A5",
                  "Name",
                ],
              },
              " - ExecutionsFailed",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "StateMachine2E01A3A5",
            },
          },
        ],
        "EvaluationPeriods": 5,
        "InsufficientDataActions": [
          {
            "Fn::GetAtt": [
              "LambdaD247545B",
              "Arn",
            ],
          },
        ],
        "MetricName": "ExecutionsFailed",
        "Namespace": "AWS/States",
        "OKActions": [
          {
            "Fn::GetAtt": [
              "LambdaD247545B",
              "Arn",
            ],
          },
        ],
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 5,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "sfStateMachineAlarmsStateMachineExecutionsTimedOut6F0C2B8A": {
      "Properties": {
        "AlarmActions": [
          {
            "Fn::GetAtt": [
              "LambdaD247545B",
              "Arn",
            ],
          },
        ],
        "AlarmDescription": "This alarm helps in identifying timeouts in state machine executions due to poor configuration, inadequate resource allocation, or issues in the called services that need addressing.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "StateMachine2E01A3A5",
                  "Name",
                ],
              },
              " - ExecutionsTimedOut",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "StateMachine2E01A3A5",
            },
          },
        ],
        "EvaluationPeriods": 5,
        "InsufficientDataActions": [
          {
            "Fn::GetAtt": [
              "LambdaD247545B",
              "Arn",
            ],
          },
        ],
        "MetricName": "ExecutionsTimedOut",
        "Namespace": "AWS/States",
        "OKActions": [
          {
            "Fn::GetAtt": [
              "LambdaD247545B",
              "Arn",
            ],
          },
        ],
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 5,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`optional alarm configurations can be overwritten 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "StateMachine18AFC9B86": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "StateMachine1RoleDE82F282",
      ],
      "Properties": {
        "DefinitionString": ""{\\"StartAt\\":\\"PassState\\",\\"States\\":{\\"PassState\\":{\\"Type\\":\\"Pass\\",\\"Result\\":{\\"Value\\":\\"Hello, Step Functions!\\"},\\"End\\":true}}}"",
        "RoleArn": {
          "Fn::GetAtt": [
            "StateMachine1RoleDE82F282",
            "Arn",
          ],
        },
        "StateMachineName": "StateMachine1",
      },
      "Type": "AWS::StepFunctions::StateMachine",
      "UpdateReplacePolicy": "Delete",
    },
    "StateMachine1RoleDE82F282": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "states.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "StateMachine1SfStateMachineRecommendedAlarmsFromAspectStateMachine1ExecutionThrottledA4F663D1": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "AlarmDescription": "Custom alarm description",
        "AlarmName": "CustomExecutionThrottledAlarm",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 25,
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "StateMachine18AFC9B86",
            },
          },
        ],
        "EvaluationPeriods": 25,
        "InsufficientDataActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "MetricName": "ExecutionThrottled",
        "Namespace": "AWS/States",
        "OKActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "Period": 300,
        "Statistic": "Sum",
        "Threshold": 300000,
        "TreatMissingData": "ignore",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "StateMachine1SfStateMachineRecommendedAlarmsFromAspectStateMachine1ExecutionTime361E1F99": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "AlarmDescription": "Custom alarm description",
        "AlarmName": "CustomExecutionTimeAlarm",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 25,
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "StateMachine18AFC9B86",
            },
          },
        ],
        "EvaluationPeriods": 25,
        "InsufficientDataActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "MetricName": "ExecutionTime",
        "Namespace": "AWS/States",
        "OKActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "Period": 300,
        "Statistic": "Average",
        "Threshold": 300000,
        "TreatMissingData": "ignore",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "StateMachine1SfStateMachineRecommendedAlarmsFromAspectStateMachine1ExecutionsFailed7EBD08D5": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "AlarmDescription": "Custom alarm description",
        "AlarmName": "CustomExecutionsFailedAlarm",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 25,
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "StateMachine18AFC9B86",
            },
          },
        ],
        "EvaluationPeriods": 25,
        "InsufficientDataActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "MetricName": "ExecutionsFailed",
        "Namespace": "AWS/States",
        "OKActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "Period": 300,
        "Statistic": "Sum",
        "Threshold": 300000,
        "TreatMissingData": "ignore",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "StateMachine1SfStateMachineRecommendedAlarmsFromAspectStateMachine1ExecutionsTimedOut3ECF1B75": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "AlarmDescription": "Custom alarm description",
        "AlarmName": "CustomExecutionsTimedOutAlarm",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 25,
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "StateMachine18AFC9B86",
            },
          },
        ],
        "EvaluationPeriods": 25,
        "InsufficientDataActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "MetricName": "ExecutionsTimedOut",
        "Namespace": "AWS/States",
        "OKActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "Period": 300,
        "Statistic": "Sum",
        "Threshold": 300000,
        "TreatMissingData": "ignore",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "TopicBFC7AF6E": {
      "Type": "AWS::SNS::Topic",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`stack should contain stateMachine recommended alarms if recommended alarms aspect is applied with no exclusions 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "StateMachine2E01A3A5": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "StateMachineRoleB840431D",
      ],
      "Properties": {
        "DefinitionString": ""{\\"StartAt\\":\\"PassState\\",\\"States\\":{\\"PassState\\":{\\"Type\\":\\"Pass\\",\\"Result\\":{\\"Value\\":\\"Hello, Step Functions!\\"},\\"End\\":true}}}"",
        "RoleArn": {
          "Fn::GetAtt": [
            "StateMachineRoleB840431D",
            "Arn",
          ],
        },
        "StateMachineName": "TestStateMachine",
      },
      "Type": "AWS::StepFunctions::StateMachine",
      "UpdateReplacePolicy": "Delete",
    },
    "StateMachineRoleB840431D": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "states.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "StateMachineSfStateMachineRecommendedAlarmsFromAspectStateMachineExecutionThrottledA51784C7": {
      "Properties": {
        "AlarmDescription": "This alarm is used to detect throttled executions due to exceeding AWS service limits.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "StateMachine2E01A3A5",
                  "Name",
                ],
              },
              " - ExecutionThrottled",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "StateMachine2E01A3A5",
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "ExecutionThrottled",
        "Namespace": "AWS/States",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 5,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "StateMachineSfStateMachineRecommendedAlarmsFromAspectStateMachineExecutionTimeAAA39742": {
      "Properties": {
        "AlarmDescription": "This alarm is used to detect sudden increases in execution time.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "StateMachine2E01A3A5",
                  "Name",
                ],
              },
              " - ExecutionTime",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "StateMachine2E01A3A5",
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "ExecutionTime",
        "Namespace": "AWS/States",
        "Period": 60,
        "Statistic": "Average",
        "Threshold": 300000,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "StateMachineSfStateMachineRecommendedAlarmsFromAspectStateMachineExecutionsFailedB39F05DB": {
      "Properties": {
        "AlarmDescription": "This alarm is used to detect workflows that are not working as expected.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "StateMachine2E01A3A5",
                  "Name",
                ],
              },
              " - ExecutionsFailed",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "StateMachine2E01A3A5",
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "ExecutionsFailed",
        "Namespace": "AWS/States",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 5,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "StateMachineSfStateMachineRecommendedAlarmsFromAspectStateMachineExecutionsTimedOutD5E9363C": {
      "Properties": {
        "AlarmDescription": "This alarm helps in identifying timeouts in state machine executions due to poor configuration, inadequate resource allocation, or issues in the called services that need addressing.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "StateMachine2E01A3A5",
                  "Name",
                ],
              },
              " - ExecutionsTimedOut",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "StateMachine2E01A3A5",
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "ExecutionsTimedOut",
        "Namespace": "AWS/States",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 5,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`when an resource is excluded from the aspect config it should not have alarms 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "StateMachine18AFC9B86": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "StateMachine1RoleDE82F282",
      ],
      "Properties": {
        "DefinitionString": ""{\\"StartAt\\":\\"PassState\\",\\"States\\":{\\"PassState\\":{\\"Type\\":\\"Pass\\",\\"Result\\":{\\"Value\\":\\"Hello, Step Functions!\\"},\\"End\\":true}}}"",
        "RoleArn": {
          "Fn::GetAtt": [
            "StateMachine1RoleDE82F282",
            "Arn",
          ],
        },
        "StateMachineName": "StateMachine1",
      },
      "Type": "AWS::StepFunctions::StateMachine",
      "UpdateReplacePolicy": "Delete",
    },
    "StateMachine1RoleDE82F282": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "states.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "StateMachine21CE8E3CE": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "StateMachine2Role6BE3CF0B",
      ],
      "Properties": {
        "DefinitionString": ""{\\"StartAt\\":\\"PassState\\",\\"States\\":{\\"PassState\\":{\\"Type\\":\\"Pass\\",\\"Result\\":{\\"Value\\":\\"Hello, Step Functions!\\"},\\"End\\":true}}}"",
        "RoleArn": {
          "Fn::GetAtt": [
            "StateMachine2Role6BE3CF0B",
            "Arn",
          ],
        },
        "StateMachineName": "StateMachine2",
      },
      "Type": "AWS::StepFunctions::StateMachine",
      "UpdateReplacePolicy": "Delete",
    },
    "StateMachine2Role6BE3CF0B": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "states.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "StateMachine2SfStateMachineRecommendedAlarmsFromAspectStateMachine2ExecutionThrottledE157E920": {
      "Properties": {
        "AlarmDescription": "This alarm is used to detect throttled executions due to exceeding AWS service limits.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "StateMachine21CE8E3CE",
                  "Name",
                ],
              },
              " - ExecutionThrottled",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "StateMachine21CE8E3CE",
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "ExecutionThrottled",
        "Namespace": "AWS/States",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 5,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "StateMachine2SfStateMachineRecommendedAlarmsFromAspectStateMachine2ExecutionTime0DE12FE1": {
      "Properties": {
        "AlarmDescription": "This alarm is used to detect sudden increases in execution time.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "StateMachine21CE8E3CE",
                  "Name",
                ],
              },
              " - ExecutionTime",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "StateMachine21CE8E3CE",
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "ExecutionTime",
        "Namespace": "AWS/States",
        "Period": 60,
        "Statistic": "Average",
        "Threshold": 300000,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "StateMachine2SfStateMachineRecommendedAlarmsFromAspectStateMachine2ExecutionsFailedE3948986": {
      "Properties": {
        "AlarmDescription": "This alarm is used to detect workflows that are not working as expected.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "StateMachine21CE8E3CE",
                  "Name",
                ],
              },
              " - ExecutionsFailed",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "StateMachine21CE8E3CE",
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "ExecutionsFailed",
        "Namespace": "AWS/States",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 5,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "StateMachine2SfStateMachineRecommendedAlarmsFromAspectStateMachine2ExecutionsTimedOut01DA7E00": {
      "Properties": {
        "AlarmDescription": "This alarm helps in identifying timeouts in state machine executions due to poor configuration, inadequate resource allocation, or issues in the called services that need addressing.",
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::GetAtt": [
                  "StateMachine21CE8E3CE",
                  "Name",
                ],
              },
              " - ExecutionsTimedOut",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 5,
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "StateMachine21CE8E3CE",
            },
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "ExecutionsTimedOut",
        "Namespace": "AWS/States",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 5,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
